--- a/Minimal.API/appsettings.json
+++ b/Minimal.API/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AuthJwt": {
+    "KEY": "net6_2022"
+  }
 }
